--- a/config/database.yml
+++ b/config/database.yml
@@ -5,20 +5,21 @@
 #
 default: &default
   adapter: postgresql
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  database: woofers_development
+  encoding: UTF8
+  username: woofers
+  pasword: woofers
+  port: 5432
+  host: localhost
+  min_messages: warning
+  pool: <%= ENV['DATABASE_POOL'] || 5 %>
 
 development:
   <<: *default
-  database: development_postgresql
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: test_postgresql
-
-production:
-  <<: *default
-  database: production_postgresql
+  database: woofers_test
